--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,11 @@
     word-spacing: 2px;
 }
 
+a{
+    color: white;
+    text-decoration: none;
+}
+
 .App{
     background: linear-gradient(to bottom,var(--primary),var(--secondary));
     color: white;
@@ -26,6 +31,8 @@
     height: fit-content;
     padding: 1.5rem;
 }
+
+
 
 .home{
     max-width: 60vh;
@@ -138,6 +145,7 @@
 .createpage{
     display: flex;
     flex-direction: column;
+    max-width: 60vh;
 }
 
 .createpage form{
@@ -212,6 +220,120 @@
     font-size: 1rem;
     margin-left: 1rem;
 }
+
+/* Update page */
+
+.update-page{
+    display: flex;
+    flex-direction: column;
+    max-width: 60vh;
+    margin: auto;
+}
+
+.update-page .up-header{
+    text-align: center;
+    font-size: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    height: 12vh;
+    justify-content: space-between;
+    margin-bottom: 4rem;
+    align-items: center;
+}
+
+.update-page up-title{
+    color: var(--white);
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.update-page i{
+    color: var(--primaryalt);
+    width: fit-content;
+    padding: 0.8rem;
+}
+
+.update-page form{
+    width: 100%;
+    background: linear-gradient(to bottom right, rgba(7, 0, 26, 0.719), rgba(0, 0, 0, 0.3));
+    backdrop-filter: blur(0.4rem);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    align-items: flex-start;
+    box-shadow:0px 0px 10px var(--shadow);
+}
+
+.update-page form label,.update-page form input,.update-page form select,.update-page form .textbox textarea,.update-page .btn-container,.update-page .completed-btn,.update-page .newdate input::placeholder{
+    font-family: 'Montserrat';
+    color: var(--primaryalt);
+    appearance: none;
+    background:none;
+    border: none;
+    font-size: 1.3rem;
+}
+
+.update-page .textbox{
+    width: 100%;
+    margin-bottom: 1rem;
+    display: flex;
+    border-bottom: 2px solid var(--primary);
+    align-items: flex-end;
+    justify-content: center;
+    padding: 0.3rem;
+}
+
+.update-page .updes{
+    align-items: flex-start;
+}
+
+.update-page form .textbox label{
+    position: absolute;
+    left: 1rem;
+    font-size: 0.8rem;
+    color: #838dff;
+}
+
+.update-page form .textbox input,.update-page form .textbox select,.update-page form .textbox textarea{
+    width: 60%;
+    outline: none;
+    text-align: center;
+    font-size: medium;
+    resize: none;
+    font-size: 1.2rem;
+    overflow: hidden;
+}
+
+.update-page .btn-container,.update-page .completed-btn{
+    margin-top: 1rem;
+    font-size: medium;
+    width: 100%;
+    font-size: 1.2rem;
+    border: 2px solid var(--primary);
+    width: 50%;
+    border-radius: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    cursor: pointer;
+    font-size: 0.8rem;
+    margin: 0 0.2rem;
+    padding-left: 1rem;
+}
+
+.update-page .btn-container i{
+    font-size: 0.8rem;
+}
+
+.btns{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+/* footer */
 
 .footer{
     align-self: center;
