--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@ a{
     margin-bottom: 1rem;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     padding: 1rem;
     border-radius: 0.7rem;
     transition: 0.5s ease;
@@ -172,7 +173,7 @@ a{
     box-shadow:0px 0px 10px var(--shadow);
 }
 
-.createpage form label,.createpage form input,.createpage form select,.createpage form .textbox textarea,.createpage .btn-container,.createpage .newdate input::placeholder{
+.createpage form label,.createpage form input,.createpage form select,.createpage form .textbox textarea,.createpage .btn-container,.createpage .newdate input::placeholder,.show-btn{
     font-family: 'Montserrat';
     color: var(--primaryalt);
     appearance: none;
@@ -200,6 +201,11 @@ a{
     left: 1rem;
     font-size: 0.8rem;
     color: #838dff;
+}
+
+.show-btn{
+    font-size: 1rem;
+    color: #ffffff;
 }
 
 .createpage form .textbox input,.createpage form .textbox select,.createpage form .textbox textarea{
@@ -360,4 +366,19 @@ a{
 
 .footer i{
     color: red;
+}
+
+.work-in-progress{
+    width: 100%;
+    text-align: center;
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+}
+
+.work-in-progress img{
+    margin-left: 1rem;
+    height: 2rem;
 }
