--- a/src/index.css
+++ b/src/index.css
@@ -173,7 +173,6 @@ a{
 }
 
 .createpage form{
-    width: 100%;
     background: linear-gradient(to bottom right, rgba(7, 0, 26, 0.719), rgba(0, 0, 0, 0.3));
     backdrop-filter: blur(0.4rem);
     border-radius: 1rem;
@@ -182,6 +181,7 @@ a{
     padding: 1rem;
     align-items: flex-start;
     box-shadow:0px 0px 10px var(--shadow);
+    width: 100% !important;
 }
 
 .createpage form label,.createpage form input,.createpage form select,.createpage form .textbox textarea,.createpage .btn-container,.createpage .newdate input::placeholder,.show-btn{
